# Temp

./: .gitignore  CMakeLists.txt  main.c
demos/: CMakeLists.txt  main.c  modelviewmodule.c  modelviewmodule.h  simplemodelview.c  simplemodelview.h
demos/modelviewdemo/: CMakeLists.txt  main.c  modelviewmodule.c  modelviewmodule.h
demos/shader/: character.fs  character.vs
engine/: CMakeLists.txt  attrib.c  attrib.h  buffer.c  buffer.h  buffers.c  buffers.h  commandqueue.c  commandqueue.h  commandqueuelist.c  commandqueuelist.h  commands.h  glcommands.c  glrend.c  glrend.h  glstate.c  glstate.h  program.c  program.h  programtree.c  programtree.h  rend.c  rend.h  scene.c  scene.h  typedefs.h  vertexarray.c  vertexarray.h  window.c  window.h
