find_package(PkgConfig REQUIRED)
pkg_search_module(GLFW REQUIRED glfw3)
include_directories(${GLFW_INCLUDE_DIRS})
add_library(engine window.c buffer.c vertexarray.c commandqueue.c commandqueuelist.c glcommands.c rend.c attrib.c program.c)
target_link_libraries(engine pthread GL GLEW ${GLFW_STATIC_LIBRARIES})
